--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Kevin's Portfolio</h1>
     <p>Testing my html</p>
-    <P>This link here takes you to my Facebook Page <href="https://www.facebook.com/SnoozyKL">Kevin's Facebook</a></P>
+    <P>This link here takes you to my Facebook Page <a href="https://www.facebook.com/SnoozyKL">Kevin's Facebook</a></P>
     
 </body>
 </html>
