--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>Kevin's Portfolio</h1>
     <p>Testing my html</p>
     <P>This link here takes you to my Facebook Page <a href="https://www.facebook.com/SnoozyKL">Kevin's Facebook</a></P>
+    <p>another test for github</p>
     
 </body>
 </html>
