--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
     <title>Kevin's Portfolio</title>
+    <link rel = "stylesheet"
+      type = "text/css"
+      href = "css/index.css" />
 </head>
 <body>
     <h1>Kevin's Portfolio</h1>
     <p>Testing my html</p>
     <P>This link here takes you to my Facebook Page <a href="https://www.facebook.com/SnoozyKL">Kevin's Facebook</a></P>
     <p>another test for github</p>
-    
+
 </body>
 </html>
