--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html>
 <head>
     <title>Kevin's Portfolio</title>
+
     <link rel = "stylesheet"
       type = "text/css"
-      href = "css/index.css" />
+      href = "css/index_style.css" />
+
 </head>
 <body>
+  <div class="top_pad">
+    <ul class="menu_bar">
+      <li><a href="page/index.html">Home</a></li>
+      <li><a href="page/about_me.html">About Me</a></li>
+      <li><a href="page/experience.html">Experience</a></li>
+      <li><a href="page/contact.html">Contact</a></li>
+    </ul>
+
+  </div>
     <h1>Kevin's Portfolio</h1>
     <p>Testing my html</p>
     <P>This link here takes you to my Facebook Page <a href="https://www.facebook.com/SnoozyKL">Kevin's Facebook</a></P>
