--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
       <li><a href="page/experience.html">Experience</a></li>
       <li><a href="page/contact.html">Contact</a></li>
     </ul>
-
   </div>
+
     <h1>Kevin's Portfolio</h1>
-    <p>Testing my html</p>
+    <h3>This is my wife</h3>
+    <p><img src="css/pics/btg1.jpg" alt="My Wife"></p>
+  <div class="intro">
+    <p>My wife Celine Fang-Lee is a very beautiful and caring person. Everytime I see her, always makes me happy.</p>
+    <p>She said she will have 2 kids with me, a boy and a girl and we will live in a huge house</p>
     <P>This link here takes you to my Facebook Page <a href="https://www.facebook.com/SnoozyKL">Kevin's Facebook</a></P>
     <p>another test for github</p>
-
+  </div>
 </body>
 </html>
