--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
   </div>
 
     <h1>Kevin's Portfolio</h1>
-    <h3>This is my wife</h3>
-    <p><img src="css/pics/btg1.jpg" alt="My Wife"></p>
+    <p><img src="css/pics/abstract.jpg" alt="abstract"></p>
   <div class="intro">
-    <p>My wife Celine Fang-Lee is a very beautiful and caring person. Everytime I see her, always makes me happy.</p>
-    <p>She said she will have 2 kids with me, a boy and a girl and we will live in a huge house</p>
     <P>This link here takes you to my Facebook Page <a href="https://www.facebook.com/SnoozyKL">Kevin's Facebook</a></P>
     <p>another test for github</p>
   </div>
