added profile link wallpaper

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
     </ul>
   </div>
 
-    <h1>Kevin's Portfolio</h1>
-    <p><img src="css/pics/abstract.jpg" alt="abstract"></p>
   <div class="intro">
-    <P>This link here takes you to my Facebook Page <a href="https://www.facebook.com/SnoozyKL">Kevin's Facebook</a></P>
-    <p>another test for github</p>
+    <h1>Kevin's Portfolio</h1>
+    <P>You can check out my Facebook profile with the link or my picture.<a href="https://www.facebook.com/SnoozyKL">Kevin's Facebook</a></P>
+    <p><a href="https://www.facebook.com/SnoozyKL"><img src="css/pics/profile1.jpg"></a></p>
   </div>
 </body>
 </html>
