--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="top_pad">
     <ul class="menu_bar">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="#">Home</a></li>
       <li><a href="page/about_me.html">About Me</a></li>
       <li><a href="page/experience.html">Experience</a></li>
       <li><a href="page/contact.html">Contact</a></li>
