--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     <p><a href="https://www.facebook.com/SnoozyKL"><img src="css/pics/profile1.jpg"></a></p>
   </div>
 
+  <div class="footer">
+    <p>Email: snoozykl.github@gmail.com </p>
 
-
+  </div>
 
 </body>
 </html>
