--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 </head>
 <body>
+  <div class="header">
+    <h1>HOME</h1>
+  </div>
+
   <div class="top_pad">
     <ul class="menu_bar">
       <li><a href="#">Home</a></li>
@@ -25,7 +29,7 @@
   </div>
 
   <div class="footer">
-    <p>Email: snoozykl.github@gmail.com </p>
+    <p>Email: <a href="#">snoozykl.github@gmail.com</a></p>
 
   </div>
 
