--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
   </div>
 
   <div class="footer">
-    <p>Email: <a href="#">snoozykl.github@gmail.com</a></p>
-
+    <h3>Contact Information</h3>
+    <ul>
+      <li>Email: snoozykl.github@gmail.com</li>
+      <li><a href="https://www.instagram.com/soulhunterkl/"><img src="css/pics/instagram2.jpg"></a></li>
+      <li><a href="https://www.linkedin.com/in/kevin-lee-94894b135/"><img src="css/pics/linkedin.png"></a></li>
+    </ul>
   </div>
-
 </body>
 </html>
