--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div class="intro">
     <h1>Kevin's Portfolio</h1>
-    
+    <p>Hello! My name is Kevin and I am based in Houston.</p>
     <p>You can check out my Facebook profile with the link or my picture. <a href="https://www.facebook.com/SnoozyKL">Kevin's Facebook</a></p>
     <p><a href="https://www.facebook.com/SnoozyKL"><img src="css/pics/profile1.jpg"></a></p>
   </div>
