--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <title>Kevin's Portfolio</title>
-
     <link rel = "stylesheet"
       type = "text/css"
       href = "css/index_style.css" />
+
+      </script>
 
 </head>
 <body>
