--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel = "stylesheet"
       type = "text/css"
       href = "css/index_style.css?v=1.1.9" />
+      <script src="../js/index.js"></script>
 </head>
 <body>
   <div class="header">
