--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en-us">
 <head>
     <title>Kevin's Portfolio</title>
+    <meta name="intro" content="Intro to my Portfolio">
+    <meta name="Portfolio" content="Kevin Lee">
     <link rel = "stylesheet"
       type = "text/css"
       href = "css/index_style.css?v=1.1.9" />
