--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Kevin's Portfolio</title>
     <meta name="intro" content="Intro to my Portfolio">
     <meta name="Portfolio" content="Kevin Lee">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel = "stylesheet"
       type = "text/css"
       href = "css/index_style.css?v=1.1.9" />
