--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   //});
 
   $(function() {//Shorter way of .ready function
-    $("#pic1").toggle(1000).toggle(1000);
+    $("#pic1").fadeOut(1000).fadeIn(1000).fadeOut(1000).fadeIn(1000).fadeOut(1000).fadeIn(1000);
 });
 </script>
 
