--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1>Kevin's Portfolio</h1>
     <p>Hello! I am Kevin and this is my Web Portfolio</p>
     <p>You can check out my Facebook profile with the link or my picture. <a class="links" href="https://www.facebook.com/SnoozyKL">Kevin's Facebook</a></p>
-    <p id="pic1"><a href="https://www.facebook.com/SnoozyKL"><img src="css/pics/profile1.jpg" alt="Profile"></a></p>
+    <p id="pic1"><a href="https://www.facebook.com/SnoozyKL"><img src="css/pics/linkedinProfile.jpg" alt="Profile"></a></p>
   </div>
 
   <div class="footer">
