--- a/index.html
+++ b/index.html
@@ -50,13 +50,20 @@
 <script src="js/jquery-3.4.1.js"></script>
 
 <script>
+$(document).ready(function(){
+  $("pic1").mouseenter(function(){
+
+  })
+})
   //$(document).ready(function() { //means wait for my document to fully load, then start runing stuff
     //$("#pic1").hide(300).show(1000).hide(300).show(200);
   //});
 
-  $(function() {//Shorter way of .ready function
-    $("#pic1").fadeOut(1000).fadeIn(1000).fadeOut(1000).fadeIn(1000).fadeOut(1000).fadeIn(1000);
-});
+  //
+  //  $("#pic1").fadeOut(1000).fadeIn(1000).fadeOut(1000).fadeIn(1000).fadeOut(1000).fadeIn(1000);
+//});
+
+//https://www.w3schools.com/jquery/tryit.asp?filename=tryjquery_event_mouseenter_mouseleave
 </script>
 
 
