--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <h3>Social Media</h3>
     <ul>
         <li>Email: snoozykl.github@gmail.com</li>
+        <!-- </li>
+        <li><a href="https://www.facebook.com/SnoozyKL"><img src="css/pics/fb1.png" alt="Facebook"></a>
+        </li> -->
         <li><a href="https://www.instagram.com/soulhunterkl/"><img src="css/pics/instagram2.jpg" alt="Instagram"></a>
         </li>
         <li><a href="https://www.linkedin.com/in/kevin-lee-94894b135/"><img src="css/pics/linkedin.png" alt="Linkedin"></a>
