--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <p id="pic1"><a href="https://www.facebook.com/SnoozyKL"><img src="css/pics/linkedinProfile.jpg" alt="Profile"></a></p>
   </div>
 
+  <a href='http://www.freevisitorcounters.com'>freevisitorcounters's Website</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2823b90d38b9c5a53abab66eec94e5c3ffdb374b'></script>
+  <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/853000/t/1"></script>
+
   <div class="footer">
     <h3>Social Media</h3>
     <ul>
