--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
     <p>Hello! I am Kevin and this is my Web Portfolio</p>
     <p>You can check out my Facebook profile with the link or my picture. <a class="links" href="https://www.facebook.com/SnoozyKL">Kevin's Facebook</a></p>
     <p id="pic1"><a href="https://www.facebook.com/SnoozyKL"><img src="css/pics/linkedinProfile.jpg" alt="Profile"></a></p>
-    <p><script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2823b90d38b9c5a53abab66eec94e5c3ffdb374b'></script>
-    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/853000/t/1"></script></p>
   </div>
 
 
@@ -46,6 +44,8 @@
         <li><a href="https://www.linkedin.com/in/kevin-lee-94894b135/"><img src="css/pics/linkedin.png" alt="Linkedin"></a>
         </li>
     </ul>
+    <p><a href='http://www.freevisitorcounters.com'>freevisitorcounters's Website</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2823b90d38b9c5a53abab66eec94e5c3ffdb374b'></script>
+      <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/853000/t/1"></script></p>
 </div>
 
 
