--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 
   <p><a href='http://www.freevisitorcounters.com'>freevisitorcounters's Website</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2823b90d38b9c5a53abab66eec94e5c3ffdb374b'></script>
-    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/853000/t/1"></script></p>
+    <!--<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/853000/t/1"></script> --></p>
 
   <div class="footer">
     <h3>Social Media</h3>
