--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
         </li>
         <li><a href="https://www.linkedin.com/in/kevin-lee-94894b135/"><img src="css/pics/linkedin.png" alt="Linkedin"></a>
         </li>
-        <li><a href='http://www.freevisitorcounters.com'>freevisitorcounters's Website</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2823b90d38b9c5a53abab66eec94e5c3ffdb374b'></script>
-          <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/853000/t/1"></script></li>
     </ul>
 </div>
-
+<p><a href='http://www.freevisitorcounters.com'>freevisitorcounters's Website</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2823b90d38b9c5a53abab66eec94e5c3ffdb374b'></script>
+  <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/853000/t/1"></script></p>
 
 
 
