--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </ul>
 </div>
 
+<main>
 <div class="intro">
     <h1>Kevin's Portfolio</h1>
     <p>Hello! I am Kevin and this is my Web Portfolio</p>
@@ -32,7 +33,7 @@
 
   <p><a href='http://www.freevisitorcounters.com'>freevisitorcounters's Website</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2823b90d38b9c5a53abab66eec94e5c3ffdb374b'></script>
   <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/853000/t/1"></script></p>
- 
+ </main>
   
   <div class="footer">
     <h3>Social Media</h3>
