--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="intro">
     <h1>Kevin's Portfolio</h1>
     <p>Hello! I am Kevin and this is my Web Portfolio</p>
-    <p>You can check out my LinkedIn profile with the link or Click on my picture. <a class="links" href="https://www.facebook.com/SnoozyKL">Kevin's Facebook</a></p>
+    <p>You can check out my LinkedIn profile with the link or Click on my picture. <a class="links" href="https://www.linkedin.com/in/kevin-lee-94894b135/">Kevin's Facebook</a></p>
     <p id="pic1"><a href="https://www.linkedin.com/in/kevin-lee-94894b135/"><img src="css/pics/linkedinProfile.jpg" alt="Profile"></a></p>
   </div>
 </main>
