--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
     <p id="pic1"><a href="https://www.linkedin.com/in/kevin-lee-94894b135/"><img src="css/pics/linkedinProfile.jpg" alt="Profile"></a></p>
   </div>
   
-   <p>
+  <div class="jsdate">
+  <p>
 	<a href='http://www.freevisitorcounters.com'>freevisitorcounters's Website</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2823b90d38b9c5a53abab66eec94e5c3ffdb374b'></script>
 	<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/853000/t/1"></script>
   </p>
-  
+  </div>
 </main>
     
   <p>
