--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
   
   <div class="jsdate">
   <p>
-	<a href='http://www.freevisitorcounters.com'>freevisitorcounters's Website</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2823b90d38b9c5a53abab66eec94e5c3ffdb374b'></script>
+	Number of Visitors Counter:
+	<script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2823b90d38b9c5a53abab66eec94e5c3ffdb374b'></script>
 	<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/853000/t/1"></script>
+	<a href='http://www.freevisitorcounters.com'>freevisitorcounters's Website</a>
+	
   </p>
   </div>
 </main>
