--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 	<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/853000/t/1"></script>
 	<a href='http://www.freevisitorcounters.com'>freevisitorcounters's Website</a>
 	
+	<p>Click the button below to shows today's date and time.</p>
+    <div class="today">
+      <button type="button" onclick="onClick()">Today's Date</button>
+    </div>
+    <p id="currentdate">Current Date!</p>
+	
   </p>
   </div>
 </main>
