--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="intro" content="Intro to my Portfolio">
     <meta name="Portfolio" content="Kevin Lee">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	
     <link rel = "stylesheet"
       type = "text/css"
       href = "css/index_style.css?v=1.1.9" />
+	  <script src="js/about_me.js"></script>
+	  
+	  
 </head>
 <body>
   <div class="header">
@@ -48,11 +53,12 @@
   </div>
 </main>
     
+<!--	
   <p>
 	<a href='http://www.freevisitorcounters.com'>freevisitorcounters's Website</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2823b90d38b9c5a53abab66eec94e5c3ffdb374b'></script>
 	<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/853000/t/1"></script>
   </p>
-
+-->
   
   <div class="footer">
     <h3>Social Media</h3>
