Date and IG Change

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 	
 	<p>Click the button below to shows today's date and time.</p>
     <div class="today">
-      <button type="button" onclick="onClick()">Today's Date</button>
+      <button type="button" onclick="onClick()">Click Me!</button>
     </div>
-    <p id="currentdate">Current Date!</p>
+    <p id="currentdate">Current Date & Time!</p>
 	
   </p>
   </div>
@@ -67,7 +67,7 @@
         <!-- </li>
         <li><a href="https://www.facebook.com/SnoozyKL"><img src="css/pics/fb1.png" alt="Facebook"></a>
         </li> -->
-        <li><a href="https://www.instagram.com/soulhunterkl/"><img src="css/pics/instagram2.jpg" alt="Instagram"></a>
+        <li><a href="https://www.instagram.com/snoozykl/"><img src="css/pics/instagram2.jpg" alt="Instagram"></a>
         </li>
         <li><a href="https://www.linkedin.com/in/kevin-lee-94894b135/"><img src="css/pics/linkedin.png" alt="Linkedin"></a>
         </li>
