--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <main>
 <div class="intro">
     <h1>Kevin's Portfolio</h1>
-    <p>Hello! I am Kevin and this is my Web Portfolio</p>
+    <p>Hello! My name is Kevin and this is my Web Portfolio</p>
     <p>You can check out my LinkedIn profile with the link or Click on my picture. <a class="links" href="https://www.linkedin.com/in/kevin-lee-94894b135/">Kevin's LinkedIn</a></p>
     <p id="pic1"><a href="https://www.linkedin.com/in/kevin-lee-94894b135/"><img src="css/pics/linkedinProfile.jpg" alt="Profile"></a></p>
   </div>
