--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div class="footer">
     <h3>Social Media</h3>
     <ul>
-        <li>Email: snoozykl.github@gmail.com</li>
+        <li>Email: kevinlee8993@gmail.com</li>
         <!-- </li>
         <li><a href="https://www.facebook.com/SnoozyKL"><img src="css/pics/fb1.png" alt="Facebook"></a>
         </li> -->
